# Tacto-Mujoco

./: .gitignore  README.md  SimInSparsh.code-workspace  pyproject.toml  requirements.txt
src/sim_in_sparsh/: __init__.py
src/sim_in_sparsh/playground/: touch_playground_custom_mj_launcher.py  touch_playground_mujoco_launcher.py
src/sim_in_sparsh/playground/playground_data/: a.stl  touch_playground.xml
src/sim_in_sparsh/playground/playground_data/ImageToStl.com_a/: a.stl
src/sim_in_sparsh/playground/tacto_examples/: demo_mujoco_digit.py  demo_pybullet_digit.py
src/sim_in_sparsh/playground/tacto_examples/conf/: digit.yaml  digit_shadow.yaml
src/tacto-mujoco/playground/: touch_playground_custom_mj_launcher.py  touch_playground_mujoco_launcher.py
src/tacto-mujoco/playground/tacto_examples/: demo_pybullet_digit.py  requirements.txt
src/tacto_mujoco/: __init__.py
src/tacto_mujoco/scripts/: touch_playground_mujoco_launcher.py
src/tacto_mujoco/scripts/assets/: touch_playground.xml
src/tacto_mujoco/scripts/tacto_examples/: demo_mujoco_digit.py
tests/: test_sim_in_sparsh.py  test_tacto_mujoco.py
