[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tacto_mujoco"
version = "0.1.0"
description = "Integration of Tacto Digit sensor simulation in Mujoco"
authors = [{ name = "Abdullah", email = "abdalla.ayad@utn.de" }]
dependencies = []

[tool.setuptools]
packages = { find = { where = ["src"] } }